# batamp-viz

./: .gitignore  LICENSE  Pipfile  README.md  netlify.toml  pyproject.toml  setup.py
analysis/: README.md  constants.py  create_range_maps.py  download.py  merge.py  prep_boundaries.py  util.py
analysis/databasin/: download.py
analysis/databasin/lib/: __init__.py  clean.py  datasets.py
analysis/lib/: graph.py  height.py  points.py  tiles.py  util.py
analysis/nabat/: README.md  download.py
analysis/nabat/lib/: __init__.py  bulk.py  clean.py  projects.py  species.py  user.py
data/: README.md  constants.py  create_range_maps.py  domains.py  download.py  geofeather.py  io.py  join.py  merge.py  prep_boundaries.py  settings.py  util.py
maps/: index.js  package-lock.json  package.json
ui/: .eslintrc  gatsby-browser.js  gatsby-config.js  gatsby-node.js  gatsby-ssr.js  package-lock.json  package.json
ui/config/: constants.js  filters.js  meta.js  nav.js  typography.js
ui/data/: admin1Species.json  admin1SpeciesTS.json  contributors.json  detectorSpecies.json  detectorTS.json  detector_ts.json  detectors.json  species.json  speciesTS.json  summary.json
ui/data/speciesTS/: anpa.json  cora.json  coto.json  epfu.json  euma.json  eupe.json  haba.json  idph.json  labl.json  labo.json  laci.json  laeg.json  lain.json  lano.json  lase.json  laxa.json  leye.json  myar.json  myau.json  myca.json  myci.json  myev.json  mygr.json  myle.json  mylu.json  myse.json  myso.json  myth.json  myve.json  myvo.json  myyu.json  nyfe.json  nyhu.json  nyma.json  pahe.json  pesu.json  tabr.json
ui/public/: index.html  manifest.json
ui/src/: App.js  config.js
ui/src/api/: index.js
ui/src/data/: api.js  contributors.json  detectors.js  detectors.json  feather.js  index.jsx  species.js  speciesTS.json  summary.json
ui/src/filters/: occurrence.js
ui/src/gatsby-plugin-theme-ui/: index.js
ui/src/mdx/: test.mdx
ui/src/pages/: 404.jsx  explore.jsx  index.jsx  map.jsx  presence.jsx  species.jsx  test.jsx  test.mdx
ui/src/style/: index.js  theme.js
ui/src/templates/: MDXTemplate.jsx  Species.jsx
ui/src/util/: data.js  dom.js  format.js  format.jsx  hooks.js  immutable.js  time.js
ui/static/data/: detectors.feather  spp_detections.feather  (+1 more)
(+183 files in other folders)
