[tool.poetry]
name = "batamp-viz"
version = "0.2.0"
description = "Bat Acoustic Monitoring Visualization Tool"
authors = ["Brendan Ward <bcward@astutespruce.com>"]
license = "MIT"
packages = [{ include = "analysis" }]

[tool.poetry.dependencies]
python = "^3.10"
pyogrio = "^0.7.2"
python-dotenv = "^1.0.0"
pyarrow = "^13.0.0"
python-databasin = { git = "https://github.com/consbio/python-databasin.git", rev = "main" }
pymgl = "^0.4.0"
shapely = "^2.0.2"
ruff = "^0.1.3"
geopandas = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
