[project]
name = "batamp-viz"
version = "0.3.0"
description = "Bat Acoustic Monitoring Visualization Tool"
readme = "README.md"
authors = [{ name = "Brendan C. Ward", email = "bcward@astutespruce.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.12"
dependencies = [
    "geopandas",
    "httpx[http2]",
    "numba",
    "pandas",
    "pyarrow",
    "pymgl",
    "pyogrio",
    "python-databasin",
    "python-dotenv",
    "ruff",
    "shapely",
]

[project.urls]
Homepage = "https://batamp.org"
Repository = "https://github.com/astute-spruce/batamp-viz"


[tool.setuptools.packages.find]
include = ["analysis"]

[tool.ruff]
line-length = 120
